--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@
     --clr-white: 0 0% 100%;
     
     /* font-sizes */
-    --fs-900: 9.375rem;
-    --fs-800: 6.25rem;
-    --fs-700: 3.5rem;
-    --fs-600: 2rem;
+    --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
+    --fs-800: 3.5rem;
+    --fs-700: 1.5rem;
+    --fs-600: 1rem;
     --fs-500: 1.75rem;
-    --fs-400: 1.125rem;
+    --fs-400: 0.9375rem;
     --fs-300: 1rem;
     --fs-200: 0.875rem;
     
@@ -22,6 +22,25 @@
     --ff-serif: "Bellefair", serif;
     --ff-sans-cond: "Barlow Condensed", sans-serif;
     --ff-sans-normal: "Barlow", sans-serif;
+}
+
+@media (min-width: 35em) {
+    :root {
+        --fs-800: 5rem;
+        --fs-700: 2.5rem;
+        --fs-600: 1.5rem;
+        --fs-400: 1rem;
+    }
+}
+
+@media (min-width: 45em) {
+    :root {
+        /* font-sizes */
+        --fs-800: 6.25rem;
+        --fs-700: 3.5rem;
+        --fs-600: 2rem;
+        --fs-400: 1.125rem;
+    }
 }
 
 
@@ -69,6 +88,9 @@ body {
     background-color: hsl( var(--clr-dark) );
     line-height: 1.5;
     min-height: 100vh;
+    
+    display: grid;
+    grid-template-rows: min-content 1fr;
 }
 
 /* make images easier to work with */
@@ -115,6 +137,10 @@ select {
     gap: var(--gap, 1rem);
 }
 
+.d-block {
+    display: block;
+}
+
 .flow > *:where(:not(:first-child)) {
     margin-top: var(--flow-space, 1rem);
 }
@@ -124,6 +150,40 @@ select {
     margin-inline: auto;
     max-width: 80rem;
 }
+
+.grid-container {
+    text-align: center;
+    display: grid;
+    place-items: center;
+    padding-inline: 1rem;
+
+}
+
+.grid-container * {
+    max-width: 50ch;
+}
+
+@media (min-width: 45em) {
+    .grid-container {
+        text-align: left;
+        column-gap: var(--container-gap, 2rem);
+        grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
+    }
+    
+    .grid-container > *:first-child {
+        grid-column: 2;
+    }
+
+    .grid-container > *:last-child {
+        grid-column: 3;
+    }
+    
+    .grid-container--home {
+        padding-bottom: max(6rem, 20vh);
+        align-items: end;
+    }
+}
+
 
 .sr-only {
   position: absolute; 
@@ -194,6 +254,7 @@ select {
 /* ------------------- */
 
 .large-button {
+    font-size: 2rem;
     position: relative;
     z-index: 1;
     display: inline-grid;
@@ -240,9 +301,9 @@ select {
 }
 
 .underline-indicators > * {
-    border: 0;
     cursor: pointer;
     padding: var(--underline-gap, 1rem) 0;
+    border: 0;
     border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
 }
 
@@ -254,7 +315,7 @@ select {
 .underline-indicators > .active,
 .underline-indicators > [aria-selected="true"] {
     color: hsl( var(--clr-white) / 1);
-    border-color: hsl( var(--clr-white) / 1);
+    border-color: hsl( var(--clr-white) / 1); 
 }
 
 .tab-list {
@@ -262,41 +323,47 @@ select {
 }
 
 .dot-indicators > * {
+    cursor: pointer;
     border: 0;
     border-radius: 50%;
-    cursor: pointer;
-    aspect-ratio: 1;
     padding: .5em;
     background-color: hsl( var(--clr-white) / .25);
 }
-
+ 
 .dot-indicators > *:hover,
-.dot-indicators > *:focus {
+.dot-indicators > *:focus { 
     background-color: hsl( var(--clr-white) / .5);
 }
 
-.dot-indicators > .active,
 .dot-indicators > [aria-selected="true"] {
-    background-color: hsl( var(--clr-white) / 1);
+    background-color: hsl( var(--clr-white) / 1); 
 }
 
-.number-indicators > * {
-    border: solid 2px hsl( var(--clr-white) / .25);
-    border-radius: 50%;
-    cursor: pointer;
-    width: 3.125em;
-    height: 3.125em;
-    background-color: hsl( var(--clr-white) / 0);
-    color: hsl( var(--clr-white) )
+/* ----------------------------- */
+/* Page specific background      */
+/* ----------------------------- */
+body {
+    background-size: cover;
+    background-position: bottom center;
+}
+/* home */
+.home {
+    height:100vh;
+    background-image: url(../public/background-home-mobile.jpg);
+    background-size: cover;
+    background-position: bottom center;
 }
 
-.number-indicators > *:hover,
-.number-indicators > *:focus {
-    border: solid 2px hsl( var(--clr-white) / .5);
+@media (min-width: 35rem) {
+    .home {
+        background-position: center center;
+        background-image: url(../public/background-home-tablet.jpg);
+    }
 }
 
-.number-indicators > .active,
-.number-indicators > [aria-selected="true"] {
-    background-color: hsl( var(--clr-white) / 1);
-    color: hsl( var(--clr-dark) )
+@media (min-width: 45rem) {
+    .home {
+        background-image: url(../public/background-home-desktop.jpg);
+    }
 }
+
